# discord_bot-ready_check

./: Cargo.toml  LICENSE  Procfile  README.md
src/: main.rs
src/commands/: help.rs  mod.rs  rdy.rs
src/utils/: token.rs
