[package]
name = "discord_bot-ready_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

serenity = {version = "0.10.7", features = ["framework", "standard_framework", "collector"]}

tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}